
Mon Jun 5 16:09:25 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - Reverse prompting order for kadmin5.


Thu Jun 1 14:48:57 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - Change admin instance name to kadmin.


Fri May 26 17:55:56 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - fix typo for restoring setting of KRB5_CONFIG on exit.


Fri May 12 16:15:07 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp: Change to use new kadmin/kadmind.  Add entries for
		krbtest/kadmin5, changepw and extraction for changepw service
		entry.

Wed May 10 16:53:28 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* default.exp: Added domain_realm stanza to krb5.conf.
	               setup_srvtab: Takes optional service name to
		       		       extract. 


Fri May 05 09:21:21 1995  Chris Provenzano (proven@mit.edu)

	* default.exp : Removed FILE: part of env(KRB5CCNAME).

Wed May  3 22:00:48 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* default.exp: (get_hostname): The FQDN returned by resolve needs
		to be made lower case as the host name is entered directly
		into the database.

Mon May  1 21:32:57 1995  Theodore Y. Ts'o  (tytso@dcl)

	* default.exp: (get_hostname): Use tests/resolve/resolve to get
		the fully qualified domain name of the local host.
		Needed for systems where gethostname() doesn't return the
		FQDN. 

Thu Apr 27 00:22:30 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* default.exp: KRB5KDC: add -n to don't fork. Set up krb5.conf 
		and set KRB5_CONFIG to point to it.

Wed Apr 26 17:46:57 1995  Mark Eichin  <eichin@cygnus.com>

	* default.exp (KADMIND, KADMIN): use kadmind.old, since these test
	the old server not the new (unfinished) one.
